app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openidconnect-demo
  name: openidconnect-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openidconnect-demo
  template:
    metadata:
      labels:
        app: openidconnect-demo
    spec:
      containers:
      - image: <YOUR>.azurecr.io/dotnet-samples/openidconnect:latest
        name: openidconnect-demo
        ports:
        - containerPort: 5000
          protocol: TCP
          name: http
        - containerPort: 5050
          protocol: TCP
          name: health
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: health
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: health
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openidconnect-demo
  name: openidconnect-demo
spec:
  ports:
  - name: openidconnect-demo
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: openidconnect-demo
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openidconnect-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - www.fabrikam.com
    secretName: fabrikam-tls
  rules:
  - host: www.fabrikam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: openidconnect-demo
          servicePort: 80
